<resources>
    <string name="playerName">Player: </string>
    <string name="player">A Singleton</string>
    <string name="handicap">Handicap: </string>
    <string name="app_name">GolfScorecard</string>
    <string name="drive">Drive</string>
    <string name="dLeft">dLeft</string>
    <string name="leftOff">Left</string>
    <string name="leftOn">L</string>
    <string name="dFairway">dFair</string>
    <string name="fairwayOff">Fair</string>
    <string name="fairwayOn">F</string>
    <string name="fromFairway">A Fair</string>
    <string name="fromFairwayOff">Fr. F</string>
    <string name="fromFairwayOn">FF</string>
    <string name="fromLeft">A L R</string>
    <string name="fromLeftOff">Fr. L R</string>
    <string name="fromLeftOn">FLR</string>
    <string name="fromRight">A R R</string>
    <string name="fromRightOff">Fr. R R</string>
    <string name="fromRightOn">FRR</string>
    <string name="dRight">dRight</string>
    <string name="rightOff">Right</string>
    <string name="rightOn">R</string>
    <string name="dSand">dSand</string>
    <string name="sandOff">Sand</string>
    <string name="sandOn">B</string>
    <string name="dTree">dTree</string>
    <string name="treeOff">Tree</string>
    <string name="treeOn">T</string>
    <string name="dOB">dOB</string>
    <string name="obOff">OB</string>
    <string name="obOn">OB</string>
    <string name="dPenalty">dPen</string>
    <string name="penaltyOff">Pen</string>
    <string name="penaltyOn">P</string>
    <string name="dShort">aShort</string>
    <string name="shortOff">Short</string>
    <string name="shortOn">S</string>
    <string name="putting">Putting</string>
    <string name="approach">Approach</string>
    <string name="aLeft">aLeft</string>
    <string name="aRight">aRight</string>
    <string name="aSand">aSand</string>
    <string name="aTree">aTree</string>
    <string name="aOB">aOB</string>
    <string name="aPenalty">aPen</string>

    <string name="middle">Middle</string>
    <string name="middleOn">M</string>
    <string name="middleOff">Mid</string>
    <string name="aShort">aShort</string>
    <string name="gir">GIR</string>
    <string name="girOff">G.I.R</string>
    <string name="girOn">G</string>
    <string name="longApproach">Long</string>
    <string name="longOff">Long</string>
    <string name="longOn">#</string>
<!--    <string name="deep">DEEP</string>-->
<!--    <string name="deepOff">5–10</string>-->
<!--    <string name="deepOn">10</string>-->
    <string name="green">Green</string>
    <string name="greenOff">Green</string>
    <string name="greenOn">X</string>
    <string name="putt0">0–10</string>
    <string name="putt1">10–20</string>
    <string name="putt2">20–30</string>
    <string name="putt3">30+</string>
    <string name="fringe">Fringe</string>
    <string name="fringeOff">Fringe</string>
    <string name="fringeOn">F</string>
    <string name="approach40off">0–40</string>
    <string name="approach40on">40</string>
    <string name="approach80off">40–80</string>
    <string name="approach80on">80</string>
    <string name="approach120off">80–120</string>
    <string name="approach120on">120</string>
    <string name="approach160off">120–160</string>
    <string name="approach160on">160</string>
    <string name="approach200Off">160–200</string>
    <string name="approach200On">200</string>
    <string name="approach200PlusOff">200+</string>
    <string name="approach200PlusOn">>200</string>
    <string name="puttZero">None</string>
    <string name="hole">Hole</string>
    <string name="holeScore">Hole Score</string>
    <string name="totalPutts">Total Putts</string>
    <string name="zero">0</string>
    <string name="tees" />
    <string name="email_results">Email results</string>
    <string name="save_results">Save Results</string>
    <string name="send_by_email">Send by email</string>
    <string name="save_file">save file</string>
    <string name="handicapValueHint">2.4</string>
    <string name="courseHandicapValueHint">36</string>
    <string name="courseHandicap">Course Handicap: </string>

</resources>
