<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/player"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:minHeight="?actionBarSize"
            android:padding="6dp"
            android:text="@string/playerName"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/playerName"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:minHeight="?actionBarSize"
            android:padding="6dp"
            android:text="@string/player"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
             />

        <TextView
            android:id="@+id/handicapLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/handicap"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

        <EditText
            android:id="@+id/handicap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="3.0"
            android:hint="@string/handicapValueHint"
            android:inputType="numberDecimal"
            android:textAlignment="textStart" />


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:tabMode="scrollable" />
    </LinearLayout>

    <!--    <com.google.android.material.appbar.AppBarLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layoutDirection="ltr"-->
    <!--        android:theme="@style/AppTheme.AppBarOverlay">-->
    <!--        <TextView-->
    <!--            android:id="@+id/title"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="46dp"-->
    <!--            android:gravity="center"-->
    <!--            android:minHeight="?actionBarSize"-->
    <!--            android:padding="1dp"-->
    <!--            android:text="@string/app_name"-->
    <!--            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />-->

    <!--        <TextView-->
    <!--            android:id="@+id/player"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="46dp"-->
    <!--            android:gravity="center"-->
    <!--            android:minHeight="?actionBarSize"-->
    <!--            android:padding="1dp"-->
    <!--            android:text="@string/player"-->
    <!--            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"-->
    <!--            app:layout_constraintStart_toRightOf="@id/title" />-->
    <!--        <EditText-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="match_parent"-->

    <!--        <com.google.android.material.tabs.TabLayout-->
    <!--            android:id="@+id/tabs"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:background="?attr/colorPrimary"-->
    <!--            app:tabMode="scrollable"/>-->
    <!--</com.google.android.material.appbar.AppBarLayout>-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="6dp"
        android:contentDescription="@string/email_results"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="6dp"
        android:contentDescription="@string/save_results"
        app:srcCompat="@android:drawable/ic_menu_save" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>